tests/ui/async-await/higher-ranked-auto-trait-4.no_assumptions.stderr
error: higher-ranked lifetime error
  --> $DIR/higher-ranked-auto-trait-4.rs:29:5
   |
LL | /     async {
LL | |         let _ = evil_function::<dyn BoringTrait, _>().await;
LL | |     }
   | |_____^

error: aborting due to 1 previous error

